overflow issues

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 body{
   font-family: 'Poppins', sans-serif;
   color: #333;
+  height: 100vh;
 }
 
 .container{
